KM-2257: fix: image attachment "sending failed" status alignment (#3993)

--- a/server/src/webplugin/css/app/mck-sidebox-1.0.css
+++ b/server/src/webplugin/css/app/mck-sidebox-1.0.css
@@ -5446,7 +5446,7 @@ box-shadow: 0 0 4px rgba(0,0,0,.22), 0 4px 8px rgba(0,0,0,.31);
 .mck-sending-failed {
 	display: none;
 	position: absolute;
-    left: -16px;
+    right: 18px;
 	top: 0;
 	font-size: 12px;
 	color: rgba(234, 61, 61, 0.87);
